08/ingress/pay.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay
    spec:
      containers:
        - name: pay-container
          image: whatwant/node-web:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  type: NodePort
  selector:
    app: pay
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
